# voice-gateway

./: .eslintrc.json  .gitignore  .prettierignore  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  tsconfig.web.json  vitest.config.ts
.github/: branch-protection.json  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  deploy-pages.yml  release.yml  wiki-sync.yml
docs/: ARCHITECTURE.md  Agents.md  Architecture.md  Audio-Pipeline.md  Build-And-Packaging.md  Conversation-Orchestrator.md  Development-Guide.md  Glossary.md  Hermes-Voice-Bridge.md  Home.md  IPC-Layer.md  PROTOCOL.md  README.md  Renderer-UI.md  SETUP.md  Settings-And-Storage.md  Setup.md  Speech-To-Text.md  State-Machine.md  TROUBLESHOOTING.md  Testing-Guide.md  Text-To-Speech.md  Troubleshooting.md  Wake-Word-Detection.md  WebSocket-Client.md  _Footer.md  _Sidebar.md  macOS-Permissions.md  sync-wiki.sh
resources/: _render-icon.py  icon.icns
resources/python/: fake_wake_runner.py  requirements.txt  wake_phrase.py  wake_word_runner.py
server/: install.sh  uninstall.sh
server/hermes-voice-bridge/: README.md  pyproject.toml
server/hermes-voice-bridge/src/hermes_voice_bridge/: __init__.py  auth.py  config.py  hermes_adapter.py  server.py
server/hermes-voice-bridge/systemd/: hermes-voice-bridge.service
server/hermes-voice-bridge/tests/: test_server.py
site/: README.md  index.html  styles.css
tools/: build-doctor.cjs
(+109 files in other folders)
