[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "hermes-voice-bridge"
version = "0.1.0"
description = "WebSocket bridge from Voice Gateway desktop app to the Hermes agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Voice Gateway contributors" }]
dependencies = [
  "aiohttp>=3.10,<4",
  "tomli; python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-aiohttp>=1.0.5",
]

[project.scripts]
hermes-voice-bridge = "hermes_voice_bridge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_voice_bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
